--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,11 +16,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest]
+        os: [ubuntu-latest, windows-latest, macos-latest]
         node_version: [12, 14, 16]
-        include:
-          - os: windows-latest
-            node_version: 16
       fail-fast: false
     env:
       LANG: en-us
